--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,42 +1,42 @@
 
 // Do not edit directly
-// Generated on Tue, 15 Dec 2020 13:02:39 GMT
+// Generated on Thu, 17 Dec 2020 14:13:39 GMT
 
-$color-primary-default: #57A4D7;
-$color-primary-lighter: #338FCC;
+$color-primary-lighter: #57A4D7;
+$color-primary-default: #338FCC;
 $color-primary-darker: #206EA2;
-$color-primary-default-contrast: white;
 $color-primary-lighter-contrast: white;
+$color-primary-default-contrast: white;
 $color-primary-darker-contrast: white;
-$color-second-default: #E6E6E6;
-$color-second-lighter: #B3B3B3;
+$color-second-lighter: #E6E6E6;
+$color-second-default: #B3B3B3;
 $color-second-darker: #999999;
-$color-second-default-contrast: #4D4D4D;
 $color-second-lighter-contrast: #4D4D4D;
+$color-second-default-contrast: #4D4D4D;
 $color-second-darker-contrast: white;
-$color-error-default: #FCEFEC;
-$color-error-lighter: #E76E5C;
+$color-error-lighter: #FCEFEC;
+$color-error-default: #E76E5C;
 $color-error-darker: #E04D36;
-$color-error-default-contrast: #4D4D4D;
-$color-error-lighter-contrast: white;
+$color-error-lighter-contrast: #4D4D4D;
+$color-error-default-contrast: white;
 $color-error-darker-contrast: white;
-$color-info-default: #EBF4FB;
-$color-info-lighter: #AAD1EC;
+$color-info-lighter: #EBF4FB;
+$color-info-default: #AAD1EC;
 $color-info-darker: #57A4D7;
-$color-info-default-contrast: #4D4D4D;
 $color-info-lighter-contrast: #4D4D4D;
+$color-info-default-contrast: #4D4D4D;
 $color-info-darker-contrast: white;
-$color-success-default: #EDF8E9;
-$color-success-lighter: #B4DEA4;
+$color-success-lighter: #EDF8E9;
+$color-success-default: #B4DEA4;
 $color-success-darker: #6FBA53;
-$color-success-default-contrast: #4D4D4D;
 $color-success-lighter-contrast: #4D4D4D;
+$color-success-default-contrast: #4D4D4D;
 $color-success-darker-contrast: white;
-$color-warning-default: #FCF5E8;
-$color-warning-lighter: #F0D49B;
+$color-warning-lighter: #FCF5E8;
+$color-warning-default: #F0D49B;
 $color-warning-darker: #DFA739;
-$color-warning-default-contrast: #4D4D4D;
-$color-warning-lighter-contrast: white;
+$color-warning-lighter-contrast: #4D4D4D;
+$color-warning-default-contrast: white;
 $color-warning-darker-contrast: white;
 $color-foreground-text: #4D4D4D;
 $color-foreground-text-less-contrast: #999999;
@@ -44,29 +44,165 @@ $color-foreground-text-disabled: #B3B3B3;
 $color-foreground-divider: #E6E6E6;
 $color-foreground-border: #B3B3B3;
 $color-foreground-icon: #999999;
-$color-background-background: #ffffff;
-$color-background-background-popup: #ffffff;
+$color-background-background: white;
+$color-background-background-popup: white;
 $color-background-background-popup-footer: #F0F0F0;
 $color-background-background-disabled: #F0F0F0;
-$color-background-overlay-hovered: #000000;
-$color-background-overlay-active: #000000;
-$color-background-overlay-disabled: #000000;
-$component-button-color-active-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
-$component-button-color-primary-color: white;
-$component-button-color-primary-border-color: map-get($primary, 560);
-$component-button-color-primary-background: map-get($primary, 500);
-$component-button-color-primary-icon-color: white;
-$component-button-color-primary-active-border-color: mc-color($primary, 560); // darken(mc-color($primary, 560), 5)
-$component-button-color-primary-active-background: mc-color($primary, 500); // darken(mc-color($primary, 560), 5)
-$component-button-color-second-border-color: #B3B3B3;
-$component-button-color-second-background: #F0F0F0;
-$component-button-color-second-color: #4D4D4D;
-$component-button-color-second-icon-color: #999999;
-$component-button-color-second-active-border-color: #B3B3B3; // darken(mc-color($foreground, border), 5)
-$component-button-color-second-active-background: #F0F0F0; // darken(map-get($background, background-disabled), 5
-$component-button-color-error-border-color: #B3B3B3;
-$component-button-color-error-background: #F0F0F0;
-$component-button-color-error-color: #FCEFEC;
-$component-button-color-error-icon-color: mc-color($error, 400);
-$component-button-color-error-active-border-color: #B3B3B3; // darken(mc-color($foreground, border), 5)
-$component-button-color-error-active-background: #F0F0F0; // darken(map-get($background, background-disabled), 5
+$color-background-overlay-hovered: rgba(black, 0.05);
+$color-background-overlay-active: rgba(black, 0.1);
+$color-background-overlay-disabled: rgba(white, 0.3);
+$globals-states-focused-color: #338FCC;
+$globals-states-selected-color: #114E77;
+$globals-states-pressed-shadow: inset 1px 2px 2px 0 rgba(black, 0.2);
+$globals-states-disabled-opacity: 0.3;
+$palette-blue-40: #F5FAFD;
+$palette-blue-60: #EBF4FB;
+$palette-blue-100: #D8EAF7;
+$palette-blue-200: #AAD1EC;
+$palette-blue-300: #7FBAE1;
+$palette-blue-400: #57A4D7;
+$palette-blue-500: #338FCC;
+$palette-blue-560: #277BB3;
+$palette-blue-600: #206EA2;
+$palette-blue-700: #114E77;
+$palette-blue-800: #07314D;
+$palette-blue-a-100: rgba(0, 153, 255, 0.15);
+$palette-blue-a-200: rgba(0, 153, 255, 0.3);
+$palette-blue-contrast-40: #4D4D4D;
+$palette-blue-contrast-60: #4D4D4D;
+$palette-blue-contrast-100: #4D4D4D;
+$palette-blue-contrast-200: #4D4D4D;
+$palette-blue-contrast-300: #4D4D4D;
+$palette-blue-contrast-400: white;
+$palette-blue-contrast-500: white;
+$palette-blue-contrast-560: white;
+$palette-blue-contrast-600: white;
+$palette-blue-contrast-700: white;
+$palette-blue-contrast-800: white;
+$palette-blue-contrast-a-100: #4D4D4D;
+$palette-blue-contrast-a-200: white;
+$palette-green-40: #F6FBF4;
+$palette-green-60: #EDF8E9;
+$palette-green-100: #DCF1D4;
+$palette-green-200: #B4DEA4;
+$palette-green-300: #8FCC79;
+$palette-green-400: #6FBA53;
+$palette-green-500: #52A832;
+$palette-green-560: #449327;
+$palette-green-600: #3B8520;
+$palette-green-700: #276211;
+$palette-green-800: #163F07;
+$palette-green-a-100: rgba(68, 255, 0, 0.15);
+$palette-green-contrast-40: #4D4D4D;
+$palette-green-contrast-60: #4D4D4D;
+$palette-green-contrast-100: #4D4D4D;
+$palette-green-contrast-200: #4D4D4D;
+$palette-green-contrast-300: #4D4D4D;
+$palette-green-contrast-400: white;
+$palette-green-contrast-500: white;
+$palette-green-contrast-560: white;
+$palette-green-contrast-600: white;
+$palette-green-contrast-700: white;
+$palette-green-contrast-800: white;
+$palette-green-contrast-a-100: #4D4D4D;
+$palette-red-40: #FEF7F6;
+$palette-red-60: #FCEFEC;
+$palette-red-100: #FADEDA;
+$palette-red-200: #F4B7AE;
+$palette-red-300: #ED9284;
+$palette-red-400: #E76E5C;
+$palette-red-500: #E04D36;
+$palette-red-560: #C43E29;
+$palette-red-600: #B23522;
+$palette-red-700: #832112;
+$palette-red-800: #541208;
+$palette-red-a-100: rgba(224, 79, 56, 0.15);
+$palette-red-contrast-40: #4D4D4D;
+$palette-red-contrast-60: #4D4D4D;
+$palette-red-contrast-100: #4D4D4D;
+$palette-red-contrast-200: #4D4D4D;
+$palette-red-contrast-300: #4D4D4D;
+$palette-red-contrast-400: white;
+$palette-red-contrast-500: white;
+$palette-red-contrast-560: white;
+$palette-red-contrast-600: white;
+$palette-red-contrast-700: white;
+$palette-red-contrast-800: white;
+$palette-red-contrast-a-100: #4D4D4D;
+$palette-grey-40: #F5F5F5;
+$palette-grey-60: #F0F0F0;
+$palette-grey-100: #E6E6E6;
+$palette-grey-200: #CCCCCC;
+$palette-grey-300: #B3B3B3;
+$palette-grey-400: #999999;
+$palette-grey-500: #808080;
+$palette-grey-560: #707070;
+$palette-grey-600: #666666;
+$palette-grey-700: #4D4D4D;
+$palette-grey-800: #333333;
+$palette-grey-a-40: rgba(0, 0, 0, 0.04);
+$palette-grey-a-60: rgba(0, 0, 0, 0.06);
+$palette-grey-a-100: rgba(0, 0, 0, 0.1);
+$palette-grey-a-200: rgba(0, 0, 0, 0.2);
+$palette-grey-a-300: rgba(0, 0, 0, 0.3);
+$palette-grey-a-500: rgba(0, 0, 0, 0.5);
+$palette-grey-contrast-40: #4D4D4D;
+$palette-grey-contrast-60: #4D4D4D;
+$palette-grey-contrast-100: #4D4D4D;
+$palette-grey-contrast-200: #4D4D4D;
+$palette-grey-contrast-300: #4D4D4D;
+$palette-grey-contrast-400: white;
+$palette-grey-contrast-500: white;
+$palette-grey-contrast-560: white;
+$palette-grey-contrast-600: white;
+$palette-grey-contrast-700: white;
+$palette-grey-contrast-800: white;
+$palette-yellow-40: #FDFAF3;
+$palette-yellow-60: #FCF5E8;
+$palette-yellow-100: #F8EBD1;
+$palette-yellow-200: #F0D49B;
+$palette-yellow-300: #E7BD68;
+$palette-yellow-400: #DFA739;
+$palette-yellow-500: #D6930D;
+$palette-yellow-560: #BB800A;
+$palette-yellow-600: #AA7408;
+$palette-yellow-700: #7D5504;
+$palette-yellow-800: #503602;
+$palette-yellow-a-100: rgba(255, 170, 0, 0.15);
+$palette-yellow-contrast-40: #4D4D4D;
+$palette-yellow-contrast-60: #4D4D4D;
+$palette-yellow-contrast-100: #4D4D4D;
+$palette-yellow-contrast-200: #4D4D4D;
+$palette-yellow-contrast-300: #4D4D4D;
+$palette-yellow-contrast-400: white;
+$palette-yellow-contrast-500: white;
+$palette-yellow-contrast-560: white;
+$palette-yellow-contrast-600: white;
+$palette-yellow-contrast-700: white;
+$palette-yellow-contrast-800: white;
+$palette-yellow-contrast-a-100: #4D4D4D;
+$button-color-active-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
+$button-color-primary-color: white;
+$button-color-primary-border-color: #277BB3;
+$button-color-primary-background: #338FCC;
+$button-color-primary-icon-color: white;
+$button-color-primary-active-border-color: #277BB3; // darken(mc-color($primary, 560), 5)
+$button-color-primary-active-background: #338FCC; // darken(mc-color($primary, 560), 5)
+$button-color-second-border-color: #B3B3B3;
+$button-color-second-background: #F0F0F0;
+$button-color-second-color: #4D4D4D;
+$button-color-second-icon-color: #999999;
+$button-color-second-active-border-color: #B3B3B3; // darken(mc-color($foreground, border), 5)
+$button-color-second-active-background: #F0F0F0; // darken(map-get($background, background-disabled), 5
+$button-color-error-border-color: #B3B3B3;
+$button-color-error-background: #F0F0F0;
+$button-color-error-color: #E76E5C;
+$button-color-error-icon-color: #E76E5C;
+$button-color-error-active-border-color: #B3B3B3; // darken(mc-color($foreground, border), 5)
+$button-color-error-active-background: #F0F0F0; // darken(map-get($background, background-disabled), 5
+$button-size-padding: 5px 15px;
+$icon-button-size-border-width: 1px;
+$icon-button-size-border-radius: 3px;
+$icon-button-size-padding: 5px 7px;
+$icon-button-size-text-padding: 5px 7px;
+$icon-button-size-icon-padding: 5px 15px;
