--- a/packages/mosaic/button/_button-theme.scss
+++ b/packages/mosaic/button/_button-theme.scss
@@ -125,16 +125,24 @@
 @mixin mc-button-typography($config) {
     .mc-button,
     .mc-icon-button {
-        @include mc-typography-level-to-styles($config, body);
+        font: $typography-body-font-weight
+            #{$typography-body-font-size}/#{$typography-body-line-height}
+            $typography-body-font-family;
+        letter-spacing: $typography-body-letter-spacing;
+        text-transform: $typography-body-text-transform;
 
         &.mc-primary {
-            @include mc-typography-level-to-styles($config, body-strong);
+            font: $typography-body-strong-font-weight
+                #{$typography-body-strong-font-size}/#{$typography-body-strong-line-height}
+                $typography-body-strong-font-family;
+            letter-spacing: $typography-body-strong-letter-spacing;
+            text-transform: $typography-body-strong-text-transform;
         }
     }
 
     .mc-icon-button.mc-button-wrapper {
         .mc-icon {
-            line-height: mc-line-height($config, body);
+            line-height: $typography-body-line-height;
         }
     }
 }
