--- a/packages/mosaic/core/styles/typography/_typography-utils.scss
+++ b/packages/mosaic/core/styles/typography/_typography-utils.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import '../../../design-tokens/index';
 
 
 @function mc-typography-level(
@@ -69,62 +70,122 @@
 
 @mixin mc-base-typography($config) {
     .mc-display-1 {
-        @include mc-typography-level-to-styles($config, display-1);
+        font: $typography-display-1-font-weight
+            #{$typography-display-1-font-size}/#{$typography-display-1-line-height}
+            $typography-display-1-font-family;
+        letter-spacing: $typography-display-1-letter-spacing;
+        text-transform: $typography-display-1-text-transform;
     }
 
     .mc-display-2 {
-        @include mc-typography-level-to-styles($config, display-2);
+        font: $typography-display-2-font-weight
+            #{$typography-display-2-font-size}/#{$typography-display-2-line-height}
+            $typography-display-2-font-family;
+        letter-spacing: $typography-display-2-letter-spacing;
+        text-transform: $typography-display-2-text-transform;
     }
 
     .mc-display-3 {
-        @include mc-typography-level-to-styles($config, display-3);
+        font: $typography-display-3-font-weight
+            #{$typography-display-3-font-size}/#{$typography-display-3-line-height}
+            $typography-display-3-font-family;
+        letter-spacing: $typography-display-3-letter-spacing;
+        text-transform: $typography-display-3-text-transform;
     }
 
     .mc-headline {
-        @include mc-typography-level-to-styles($config, headline);
+        font: $typography-headline-font-weight
+            #{$typography-headline-font-size}/#{$typography-headline-line-height}
+            $typography-headline-font-family;
+        letter-spacing: $typography-headline-letter-spacing;
+        text-transform: $typography-headline-text-transform;
     }
 
     .mc-subheading {
-        @include mc-typography-level-to-styles($config, subheading);
+        font: $typography-subheading-font-weight
+            #{$typography-subheading-font-size}/#{$typography-subheading-line-height}
+            $typography-subheading-font-family;
+        letter-spacing: $typography-subheading-letter-spacing;
+        text-transform: $typography-subheading-text-transform;
     }
 
     .mc-title {
-        @include mc-typography-level-to-styles($config, title);
+        font: $typography-title-font-weight
+            #{$typography-title-font-size}/#{$typography-title-line-height}
+            $typography-title-font-family;
+        letter-spacing: $typography-title-letter-spacing;
+        text-transform: $typography-title-text-transform;
     }
 
     .mc-body {
-        @include mc-typography-level-to-styles($config, body);
+        font: $typography-body-font-weight
+            #{$typography-body-font-size}/#{$typography-body-line-height}
+            $typography-body-font-family;
+        letter-spacing: $typography-body-letter-spacing;
+        text-transform: $typography-body-text-transform;
     }
 
     .mc-body_strong {
-        @include mc-typography-level-to-styles($config, body-strong);
+        font: $typography-body-strong-font-weight
+            #{$typography-body-strong-font-size}/#{$typography-body-strong-line-height}
+            $typography-body-strong-font-family;
+        letter-spacing: $typography-body-strong-letter-spacing;
+        text-transform: $typography-body-strong-text-transform;
     }
 
     .mc-body_caps {
-        @include mc-typography-level-to-styles($config, body-caps);
+        font: $typography-body-caps-font-weight
+            #{$typography-body-caps-font-size}/#{$typography-body-caps-line-height}
+            $typography-body-caps-font-family;
+        letter-spacing: $typography-body-caps-letter-spacing;
+        text-transform: $typography-body-caps-text-transform;
     }
 
     .mc-body_mono {
-        @include mc-typography-level-to-styles($config, body-mono);
+        font: $typography-body-mono-font-weight
+            #{$typography-body-mono-font-size}/#{$typography-body-mono-line-height}
+            $typography-body-mono-font-family;
+        letter-spacing: $typography-body-mono-letter-spacing;
+        text-transform: $typography-body-mono-text-transform;
     }
 
     .mc-caption {
-        @include mc-typography-level-to-styles($config, caption);
+        font: $typography-caption-font-weight
+            #{$typography-caption-font-size}/#{$typography-caption-line-height}
+            $typography-caption-font-family;
+        letter-spacing: $typography-caption-letter-spacing;
+        text-transform: $typography-caption-text-transform;
     }
 
     .mc-caption_caps {
-        @include mc-typography-level-to-styles($config, caption-caps);
+        font: $typography-caption-caps-font-weight
+            #{$typography-caption-caps-font-size}/#{$typography-caption-caps-line-height}
+            $typography-caption-caps-font-family;
+        letter-spacing: $typography-caption-caps-letter-spacing;
+        text-transform: $typography-caption-caps-text-transform;
     }
 
     .mc-caption_mono {
-        @include mc-typography-level-to-styles($config, caption-mono);
+        font: $typography-caption-mono-font-weight
+            #{$typography-caption-mono-font-size}/#{$typography-caption-mono-line-height}
+            $typography-caption-mono-font-family;
+        letter-spacing: $typography-caption-mono-letter-spacing;
+        text-transform: $typography-caption-mono-text-transform;
     }
 
     .mc-small-text {
-        @include mc-typography-level-to-styles($config, small-text);
+        font: $typography-small-text-font-weight
+            #{$typography-small-text-font-size}/#{$typography-small-text-line-height}
+            $typography-small-text-font-family;
+        letter-spacing: $typography-small-text-letter-spacing;
+        text-transform: $typography-small-text-text-transform;
     }
 
     .mc-extra-small-text {
-        @include mc-typography-level-to-styles($config, extra-small-text);
+        font: $typography-extra-small-text-font-weight
+            #{$typography-extra-small-text-font-size}/#{$typography-extra-small-text-line-height}
+            $typography-extra-small-text-font-family;
+        letter-spacing: $typography-extra-small-text-letter-spacing;
+        text-transform: $typography-extra-small-text-text-transform;
     }
 }
