--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 17 Dec 2020 14:13:39 GMT
+// Generated on Fri, 18 Dec 2020 12:44:02 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -51,6 +51,8 @@ $color-background-background-disabled: #F0F0F0;
 $color-background-overlay-hovered: rgba(black, 0.05);
 $color-background-overlay-active: rgba(black, 0.1);
 $color-background-overlay-disabled: rgba(white, 0.3);
+$font-family-base: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$font-family-monospace: 'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace;
 $globals-states-focused-color: #338FCC;
 $globals-states-selected-color: #114E77;
 $globals-states-pressed-shadow: inset 1px 2px 2px 0 rgba(black, 0.2);
@@ -181,6 +183,96 @@ $palette-yellow-contrast-600: white;
 $palette-yellow-contrast-700: white;
 $palette-yellow-contrast-800: white;
 $palette-yellow-contrast-a-100: #4D4D4D;
+$typography-display-1-font-size: 56px;
+$typography-display-1-line-height: 76px;
+$typography-display-1-letter-spacing: -0.4px;
+$typography-display-1-font-weight: normal;
+$typography-display-1-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-display-1-text-transform: null;
+$typography-display-2-font-size: 45px;
+$typography-display-2-line-height: 56px;
+$typography-display-2-letter-spacing: normal;
+$typography-display-2-font-weight: normal;
+$typography-display-2-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-display-2-text-transform: null;
+$typography-display-3-font-size: 34px;
+$typography-display-3-line-height: 44px;
+$typography-display-3-letter-spacing: 0.25px;
+$typography-display-3-font-weight: normal;
+$typography-display-3-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-display-3-text-transform: null;
+$typography-headline-font-size: 24px;
+$typography-headline-line-height: 32px;
+$typography-headline-letter-spacing: normal;
+$typography-headline-font-weight: normal;
+$typography-headline-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-headline-text-transform: null;
+$typography-title-font-size: 20px;
+$typography-title-line-height: 28px;
+$typography-title-letter-spacing: 0.15px;
+$typography-title-font-weight: 500;
+$typography-title-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-title-text-transform: null;
+$typography-subheading-font-size: 15px;
+$typography-subheading-line-height: 20px;
+$typography-subheading-letter-spacing: 0.15px;
+$typography-subheading-font-weight: 700;
+$typography-subheading-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-subheading-text-transform: null;
+$typography-body-font-size: 15px;
+$typography-body-line-height: 20px;
+$typography-body-letter-spacing: 0.15px;
+$typography-body-font-weight: normal;
+$typography-body-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-body-text-transform: null;
+$typography-body-strong-font-size: 15px;
+$typography-body-strong-line-height: 20px;
+$typography-body-strong-letter-spacing: 0.15px;
+$typography-body-strong-font-weight: 500;
+$typography-body-strong-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-body-strong-text-transform: null;
+$typography-body-caps-font-size: 15px;
+$typography-body-caps-line-height: 20px;
+$typography-body-caps-letter-spacing: 1.7px;
+$typography-body-caps-font-weight: normal;
+$typography-body-caps-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-body-caps-text-transform: uppercase;
+$typography-body-mono-font-size: 15px;
+$typography-body-mono-line-height: 20px;
+$typography-body-mono-letter-spacing: normal;
+$typography-body-mono-font-weight: normal;
+$typography-body-mono-font-family: 'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace;
+$typography-body-mono-text-transform: null;
+$typography-caption-font-size: 13px;
+$typography-caption-line-height: 16px;
+$typography-caption-letter-spacing: 0.25px;
+$typography-caption-font-weight: normal;
+$typography-caption-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-caption-text-transform: null;
+$typography-caption-caps-font-size: 13px;
+$typography-caption-caps-line-height: 16px;
+$typography-caption-caps-letter-spacing: 1.5px;
+$typography-caption-caps-font-weight: normal;
+$typography-caption-caps-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-caption-caps-text-transform: uppercase;
+$typography-caption-mono-font-size: 13px;
+$typography-caption-mono-line-height: 16px;
+$typography-caption-mono-letter-spacing: normal;
+$typography-caption-mono-font-weight: normal;
+$typography-caption-mono-font-family: 'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace;
+$typography-caption-mono-text-transform: null;
+$typography-small-text-font-size: 13px;
+$typography-small-text-line-height: 16px;
+$typography-small-text-letter-spacing: 0.25px;
+$typography-small-text-font-weight: normal;
+$typography-small-text-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-small-text-text-transform: null;
+$typography-extra-small-text-font-size: 11px;
+$typography-extra-small-text-line-height: 16px;
+$typography-extra-small-text-letter-spacing: 0.22px;
+$typography-extra-small-text-font-weight: normal;
+$typography-extra-small-text-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
+$typography-extra-small-text-text-transform: null;
 $button-color-active-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
 $button-color-primary-color: white;
 $button-color-primary-border-color: #277BB3;
