--- a/packages/mosaic/core/styles/typography/_variables.scss
+++ b/packages/mosaic/core/styles/typography/_variables.scss
@@ -1,3 +1,4 @@
+@import '../../../design-tokens/index';
 
 $typography-font-weight-values: (
     thin: 100,
@@ -12,9 +13,9 @@ $typography-font-weight-values: (
 // TODO add caption-height
 $fonts: (
     base: (
-        font-family: #{Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif}
+        font-family: $font-family-base
     ),
     monospace: (
-        font-family: #{'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace}
+        font-family: $font-family-monospace
     )
 );
