--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 18 Dec 2020 12:44:02 GMT
+// Generated on Mon, 21 Dec 2020 08:42:09 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -298,3 +298,8 @@ $icon-button-size-border-radius: 3px;
 $icon-button-size-padding: 5px 7px;
 $icon-button-size-text-padding: 5px 7px;
 $icon-button-size-icon-padding: 5px 15px;
+$popup-common-color-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2);
+$popup-common-color-border-color: #B3B3B3;
+$popup-common-color-divider-color: #CCCCCC;
+$popup-common-color-background: white;
+$popup-common-color-footer-background-color: #F0F0F0;
