--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 21 Dec 2020 08:42:09 GMT
+// Generated on Mon, 21 Dec 2020 08:56:50 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -273,6 +273,10 @@ $typography-extra-small-text-letter-spacing: 0.22px;
 $typography-extra-small-text-font-weight: normal;
 $typography-extra-small-text-font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
 $typography-extra-small-text-text-transform: null;
+$autocomplete-color-active-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
+$autocomplete-size-panel-padding: 4px 0;
+$autocomplete-size-panel-max-height: 256px;
+$autocomplete-size-panel-border-radius: 3px;
 $button-color-active-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
 $button-color-primary-color: white;
 $button-color-primary-border-color: #277BB3;
