--- a/packages/mosaic/checkbox/checkbox.scss
+++ b/packages/mosaic/checkbox/checkbox.scss
@@ -1,20 +1,19 @@
+@import '../design-tokens/index';
 @import '../core/styles/common/layout';
 @import '../core/styles/common/checkbox';
 @import '../core/styles/variables';
 
-$mc-toggle-padding: 24px !default;
-$mc-checkbox-border-width: 1px;
-$toggle-box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.2);
 // The amount of spacing between the checkbox and its label.
-$mc-checkbox-item-spacing: $mc-toggle-padding - $mc-checkbox-size;
+$mc-checkbox-item-spacing: $checkbox-size-padding - $checkbox-size-width;
 
 // The width of the line used to draw the checkmark / mixedmark.
-$mc-checkbox-mark-stroke-size: 2 / 15 * $mc-checkbox-size !default;
+$mc-checkbox-mark-stroke-size: 2 / 15 * $checkbox-size-width !default;
+
 
 // Applied to elements that are considered "marks" within the checkbox, e.g. the checkmark and
 // the mixedmark.
 %mc-checkbox-mark {
-    $width-padding-inset: 2 * $mc-checkbox-border-width;
+    $width-padding-inset: 2 * $checkbox-size-border-width;
     width: calc(100% - #{$width-padding-inset});
 }
 
@@ -45,10 +44,10 @@ $mc-checkbox-mark-stroke-size: 2 / 15 * $mc-checkbox-size !default;
 
     background-color: transparent;
     border: {
-        width: $mc-checkbox-border-width;
+        width: $checkbox-size-border-width;
         style: solid;
     }
-    box-shadow: $toggle-box-shadow;
+    box-shadow: $checkbox-size-toggle-box-shadow;
 }
 
 .mc-checkbox {
@@ -100,14 +99,14 @@ $mc-checkbox-mark-stroke-size: 2 / 15 * $mc-checkbox-size !default;
 
 .mc-checkbox-inner-container {
     display: inline-block;
-    height: $mc-checkbox-size;
+    height: $checkbox-size-width;
     line-height: 0;
     margin-right: $mc-checkbox-item-spacing;
     order: 0;
     position: relative;
     align-self: center;
     white-space: nowrap;
-    width: $mc-checkbox-size;
+    width: $checkbox-size-width;
     flex-shrink: 0;
 
     [dir='rtl'] & {
