--- a/packages/mosaic/datepicker/calendar-body.scss
+++ b/packages/mosaic/datepicker/calendar-body.scss
@@ -1,31 +1,24 @@
+@import '../design-tokens/index';
 @import '../../cdk/a11y/a11y';
 
 
-$mc-calendar-body-label-padding-start: 5% !default;
-// We don't want the label to jump around when we switch between month and year views, so we use
-// the same amount of padding regardless of the number of columns. We align the header label with
-// the one third mark of the first cell, this was chosen somewhat arbitrarily to make it look
-// roughly like the mock. Half way is too far since the cell text is center aligned.
-$mc-calendar-body-label-side-padding: 33% / 7 !default;
-$mc-calendar-body-cell-min-size: 32px !default;
-$mc-calendar-body-cell-content-margin: 5% !default;
-$mc-calendar-body-cell-content-padding: 8px !default;
-$mc-calendar-body-cell-content-border-width: 1px !default;
-
-$mc-calendar-body-min-size: 7 * $mc-calendar-body-cell-min-size !default;
-$mc-calendar-body-cell-content-size: 100% - $mc-calendar-body-cell-content-margin * 2 !default;
+$mc-calendar-body-cell-content-size: 100% - $datepicker-body-size-cell-margin * 2 !default;
 
 
 .mc-calendar__body {
-    min-width: $mc-calendar-body-min-size;
+    min-width: 7 * $datepicker-body-size-cell-min-size;
 }
 
 .mc-calendar__body-label {
     height: 0;
     line-height: 0;
     text-align: left;
-    padding-left: $mc-calendar-body-label-side-padding;
-    padding-right: $mc-calendar-body-label-side-padding;
+    // We don't want the label to jump around when we switch between month and year views, so we use
+    // the same amount of padding regardless of the number of columns. We align the header label with
+    // the one third mark of the first cell, this was chosen somewhat arbitrarily to make it look
+    // roughly like the mock. Half way is too far since the cell text is center aligned.
+    padding-left: $datepicker-body-size-label-padding-side;
+    padding-right: $datepicker-body-size-label-padding-side;
 }
 
 .mc-calendar__body-cell {
@@ -43,10 +36,10 @@ $mc-calendar-body-cell-content-size: 100% - $mc-calendar-body-cell-content-margi
 
 .mc-calendar__body-cell-content {
     position: absolute;
-    top: $mc-calendar-body-cell-content-margin;
-    left: $mc-calendar-body-cell-content-margin;
+    top: $datepicker-body-size-cell-margin;
+    left: $datepicker-body-size-cell-margin;
 
-    padding: $mc-calendar-body-cell-content-padding;
+    padding: $datepicker-body-size-cell-padding;
 
     display: flex;
     align-items: center;
@@ -59,7 +52,7 @@ $mc-calendar-body-cell-content-size: 100% - $mc-calendar-body-cell-content-margi
     // Prevents text being off-center on Android.
     line-height: 1;
 
-    border-width: $mc-calendar-body-cell-content-border-width;
+    border-width: $datepicker-body-size-cell-border-width;
     border-style: solid;
 
     @include cdk-high-contrast {
