--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 21 Dec 2020 12:56:12 GMT
+// Generated on Tue, 22 Dec 2020 10:02:55 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -317,3 +317,15 @@ $popup-common-color-border-color: #B3B3B3;
 $popup-common-color-divider-color: #CCCCCC;
 $popup-common-color-background: white;
 $popup-common-color-footer-background-color: #F0F0F0;
+$datepicker-toggle-size-width: 30px;
+$datepicker-toggle-size-height: 30px;
+$datepicker-body-size-label-padding-side: 33% / 7;
+$datepicker-body-size-cell-min-size: 32px;
+$datepicker-body-size-cell-margin: 5%;
+$datepicker-body-size-cell-padding: 8px;
+$datepicker-body-size-cell-border-width: 1px;
+$datepicker-calendar-size-padding: 8px;
+$datepicker-calendar-size-divider-width: 1px;
+$datepicker-calendar-size-icon-border-width: 2px;
+$datepicker-calendar-size-icon-prev-icon-transform: translateX(2px) rotate(-45deg);
+$datepicker-calendar-size-icon-nex-icon-transform: translateX(-2px) rotate(45deg);
